--- a/style/style.scss
+++ b/style/style.scss
@@ -1,13 +1,11 @@
 @import "reset";
 @import "variables";
+@import "mixin";
 @import "header";
-
+@import "services";
+@import "footer";
 .website {
   padding: 15px;
   max-width: 1440px;
   margin: 0 auto;
-}
-
-h1 {
-  margin: 0;
 }
