--- a/style/_header.scss
+++ b/style/_header.scss
@@ -65,26 +65,29 @@
   border: 0;
   background: transparent;
   cursor: pointer;
-}
+  transition: 0.2s ease-in-out;
+  &.active {
+    .hamburger__bar {
+      &:nth-child(1) {
+        transform: rotate(55deg);
+        transform-origin: 0% 0%;
+      }
+      &:nth-child(2) {
+        opacity: 0;
+      }
+      &:nth-child(3) {
+        transform: rotate(-55deg);
+        transform-origin: 0% 100%;
+      }
+    }
+  }
 
-.hamburger__bar:nth-child(1).active {
-  transform: rotate(55deg);
-  transform-origin: 0% 0%;
-}
-
-.hamburger__bar:nth-child(2).active {
-  opacity: 0;
-}
-
-.hamburger__bar:nth-child(3).active {
-  transform: rotate(-55deg);
-  transform-origin: 0% 100%;
-}
-
-.hamburger__bar {
-  width: 100%;
-  height: 2px;
-  background-color: $black;
+  &__bar {
+    width: 100%;
+    height: 2px;
+    transition: 0.2s ease-in-out;
+    background-color: $black;
+  }
 }
 
 @media (orientation: landscape) and (max-width: $tablet), (max-width: $tablet) {
