--- a/style/_header.scss
+++ b/style/_header.scss
@@ -1,15 +1,20 @@
 .header {
   width: 100%;
   height: calc(100vh - 30px);
-  background-color: $grey-bg;
+  background-color: $white;
   border-radius: 20px;
+  box-sizing: border-box;
 }
 
 .nav {
   width: 90%;
+  position: relative;
   margin: 0 auto;
   @include center(row, space-between, center);
   padding: 20px 0;
+  &.active {
+    background-color: $active-nav;
+  }
 }
 
 .logo {
@@ -65,9 +70,9 @@
   border: 0;
   background: transparent;
   cursor: pointer;
-  transition: 0.2s ease-in-out;
   &.active {
     .hamburger__bar {
+      transition: 0.2s ease-in-out;
       &:nth-child(1) {
         transform: rotate(55deg);
         transform-origin: 0% 0%;
@@ -81,11 +86,9 @@
       }
     }
   }
-
   &__bar {
     width: 100%;
     height: 2px;
-    transition: 0.2s ease-in-out;
     background-color: $black;
   }
 }
@@ -94,14 +97,22 @@
   .hamburger {
     display: flex;
   }
+  .nav {
+    width: 100%;
+    border-radius: 20px 20px 0 0;
+  }
   .list {
     position: absolute;
     flex-direction: column;
     width: calc(100% - 30px);
     padding: 0 15px;
-    top: 13%;
+    top: 100%;
     left: 0;
-    // transform: translateX(-100%);
+    transform: translateY(-150%);
+    transition: 0.2s ease-in-out;
+    &.active {
+      transform: translateY(0);
+    }
     &__btn {
       width: 100%;
       height: 60px;
