--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -1,6 +1,6 @@
 $grey-bg: #e0e0e0;
 $black: #090909;
 $white: #f5f5f5;
-$active-nav: #9c9c9c;
+$active-nav: #d9d9d9;
 $blue-btn: #2847d5;
 $tablet: 945px;
