--- a/style/_header.scss
+++ b/style/_header.scss
@@ -3,24 +3,21 @@
   height: calc(100vh - 30px);
   background-color: $white;
   border-radius: 20px;
-  box-sizing: border-box;
+  box-sizing: content-box;
 }
 
 .nav {
-  width: 90%;
-  position: relative;
+  max-width: 90%;
   margin: 0 auto;
   @include center(row, space-between, center);
   padding: 20px 0;
-  &.active {
-    background-color: $active-nav;
-  }
+  transition: 0.2s ease-in-out;
 }
 
 .logo {
   margin: 0;
   width: 200px;
-  height: 40px;
+  // height: 40px;
   &__link {
     display: block;
     line-height: 100%;
@@ -63,62 +60,125 @@
 
 .hamburger {
   display: none;
-  width: 48px;
-  height: 48px;
-  flex-direction: column;
-  justify-content: space-around;
+  width: 50px;
+  height: 50px;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
   border: 0;
   background: transparent;
   cursor: pointer;
-  &.active {
-    .hamburger__bar {
-      transition: 0.2s ease-in-out;
-      &:nth-child(1) {
-        transform: rotate(55deg);
-        transform-origin: 0% 0%;
-      }
-      &:nth-child(2) {
-        opacity: 0;
-      }
-      &:nth-child(3) {
-        transform: rotate(-55deg);
-        transform-origin: 0% 100%;
-      }
-    }
+  border-radius: 5px;
+  transition: 0.2s ease-in-out;
+  svg {
+    width: 50%;
+    height: 50%;
   }
   &__bar {
-    width: 100%;
-    height: 2px;
-    background-color: $black;
+    &--top,
+    &--center,
+    &--bottom {
+      transition: 0.2s ease-in-out;
+    }
+  }
+  &--open {
+    .hamburger__bar {
+      &--top,
+      &--center,
+      &--bottom {
+        fill: $white;
+      }
+      &--top {
+        transform: rotate(45deg) translate(6px, -10px);
+      }
+      &--center {
+        opacity: 0;
+      }
+      &--bottom {
+        transform: rotate(-45deg) translate(-20px, -3px);
+      }
+    }
   }
 }
 
 @media (orientation: landscape) and (max-width: $tablet), (max-width: $tablet) {
+  .header {
+    padding-top: 5px;
+  }
+  .logo {
+    width: 130px;
+  }
+  .nav {
+    max-width: 100%;
+    padding: 0 10px 0 10px;
+    border-radius: 20px;
+    margin: 0 5px;
+    position: relative;
+    flex-wrap: wrap;
+    &--open {
+      background-color: $active-nav;
+      transition: 0.2s ease-in-out;
+    }
+  }
   .hamburger {
     display: flex;
   }
-  .nav {
-    width: 100%;
-    border-radius: 20px 20px 0 0;
-  }
   .list {
-    position: absolute;
-    flex-direction: column;
-    width: calc(100% - 30px);
-    padding: 0 15px;
+    order: 3;
+    display: block;
+    @include center(column, center, center);
+    width: 100%;
     top: 100%;
+    height: 0%;
     left: 0;
-    transform: translateY(-150%);
+    padding-bottom: 20px;
     transition: 0.2s ease-in-out;
-    &.active {
-      transform: translateY(0);
-    }
+    &__item,
     &__btn {
-      width: 100%;
-      height: 60px;
-      font-size: 19px;
-      border-radius: 0;
-      margin-left: 0;
+      opacity: 0;
+      z-index: -1;
+      margin: 0;
+      a {
+        color: $white;
+        font-weight: 300;
+      }
     }
+    &--open {
+      height: 100%;
+      z-index: 1;
+      transition: 0.2s ease-in-out;
+      .list__item,
+      .list__btn {
+        z-index: 0;
+        animation: showListItem 0.2s both;
+      }
+      .list__item:nth-child(1) {
+        animation-delay: 0.1s;
+      }
+      .list__item:nth-child(2) {
+        animation-delay: 0.2s;
+      }
+      .list__item:nth-child(3) {
+        animation-delay: 0.3s;
+      }
+      .list__item:nth-child(4) {
+        animation-delay: 0.4s;
+      }
+      .list__btn {
+        animation-delay: 0.5s;
+      }
+    }
+  }
+}
+
+@keyframes showListItem {
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
