--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -38,3 +38,19 @@
 .logo--footer {
   padding: 30px;
 }
+
+@media (orientation: landscape) and (max-width: $tablet), (max-width: $tablet) {
+  .footer {
+    &__title {
+      font-size: 60px;
+    }
+    &__list {
+      flex-wrap: wrap;
+      &__item {
+        &:nth-child(5) {
+          margin-left: 0;
+        }
+      }
+    }
+  }
+}
