--- a/style/_services.scss
+++ b/style/_services.scss
@@ -9,3 +9,37 @@
     color: $blue-btn;
   }
 }
+
+.services {
+  &__list {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin: 0;
+    padding: 0;
+    &__item {
+      width: 100%;
+      background-color: $white;
+      border-radius: 41px;
+    }
+    &__link {
+      display: block;
+      text-decoration: none;
+      padding: 65px 100px;
+      color: $black;
+      font-size: 50px;
+      font-weight: 300;
+    }
+    &__word {
+      font-weight: 500;
+      font-style: italic;
+    }
+  }
+}
+
+@media (orientation: landscape) and (max-width: $tablet), (max-width: $tablet) {
+  .title {
+    font-size: 60px;
+  }
+}
