--- a/style/_services.scss
+++ b/style/_services.scss
@@ -4,9 +4,7 @@
   margin-left: 140px;
   color: $black;
   &__word {
-    font-weight: 400;
-    font-style: italic;
-    color: $blue-btn;
+    @include bold($blue-btn, 400, italic);
   }
 }
 
@@ -32,8 +30,7 @@
       font-weight: 300;
     }
     &__word {
-      font-weight: 500;
-      font-style: italic;
+      @include bold($black, 500, italic);
     }
   }
 }
