Two new block added

--- a/style/style.scss
+++ b/style/style.scss
@@ -4,6 +4,8 @@
 @import "header";
 @import "square";
 @import "services";
+@import "reminder";
+@import "analitic";
 @import "footer";
 .website {
   padding: 15px;
