--- a/style/_square.scss
+++ b/style/_square.scss
@@ -5,17 +5,82 @@
   left: 10px;
   background-image: url("../assets/square.png");
   border-radius: 40px;
-  //   max-width: 700px;
-  height: 7git 0%;
+  height: 70%;
   aspect-ratio: 1/1;
+  &__icon {
+    float: right;
+    padding: 40px;
+    // &:hover ~ .square__description .square__info {
+    //   opacity: 1;
+    //   font-size: 15px;
+    // }
+    //~ oznacza selektor siostrzany, co oznacza, że styl zostanie zastosowany na elementach, które są rodzeństwem elementu .square.
+  }
   &__description {
     width: 100%;
+    // height: 125%;
     aspect-ratio: 1/1;
+    position: relative;
     border-radius: 40px;
     background-color: $pure-white;
     transform: translateX(50%);
+    // transform: translateX(30%);
   }
   &__text {
     margin: 0;
+  }
+  &__wrapper {
+    padding: 80px 50px;
+    font-weight: 300;
+    font-size: 80px;
+  }
+  &__text {
+    &--bold {
+      @include bold($black, 500, normal);
+    }
+    &--blue {
+      @include bold($blue-btn, 300, normal);
+    }
+  }
+  &__info {
+    opacity: 0;
+    font-size: 0;
+    // padding: 0 50px;
+    // width: 80%;
+    // &-p {
+    //   font-size: 15px;
+    //   text-align: justify;
+    // }
+    // &-btn {
+    //   font-size: 16px;
+    //   padding: 15px 50px;
+    //   border: none;
+    //   border-radius: 24px;
+    //   background-color: $blue-btn;
+    //   color: $pure-white;
+    // }
+  }
+  &__footer {
+    font-weight: 300;
+    font-size: 14px;
+    width: 90%;
+    bottom: 50px;
+    left: 30px;
+    position: absolute;
+    &-top {
+      @include center(row, space-between, none);
+      &-line {
+        width: 70%;
+        height: 0px;
+        margin-top: 8px;
+        border: 0.5px solid #433e3e;
+      }
+    }
+    &-bottom {
+      @include center(row, space-between, none);
+      font-style: italic;
+      font-weight: 400;
+      font-size: 20px;
+    }
   }
 }
