--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -4,4 +4,7 @@ $white: #f5f5f5;
 $pure-white: #ffffff;
 $active-nav: #c7c7c7;
 $blue-btn: #2847d5;
+
+//break point
 $tablet: 945px;
+$mobile: 481px;
