--- a/style/_mixin.scss
+++ b/style/_mixin.scss
@@ -10,3 +10,17 @@
   font-weight: $weight;
   font-style: $style;
 }
+
+@mixin devices($breakpoint) {
+  @if $breakpoint == tablet {
+    @media only screen and (max-width: $tablet) {
+      @content;
+    }
+  }
+
+  @if $breakpoint == mobile {
+    @media only screen and (max-width: $mobile) {
+      @content;
+    }
+  }
+}
