--- a/style/_header.scss
+++ b/style/_header.scss
@@ -130,16 +130,20 @@
   }
 }
 
-@media (orientation: landscape) and (max-width: $tablet), (max-width: $tablet) {
+@include devices(tablet) {
   .header {
     padding-top: 5px;
+    border-radius: 20px;
   }
   .logo {
     width: 130px;
   }
   .nav {
     max-width: 100%;
-    padding: 0 10px 0 10px;
+    @include devices(mobile) {
+      padding: 0 10px 0 10px;
+    }
+    padding: 10px 15px 0 15px;
     border-radius: 20px;
     margin: 0 5px;
     position: relative;
