--- a/style/_square.scss
+++ b/style/_square.scss
@@ -5,26 +5,28 @@
   left: 10px;
   background-image: url("../assets/square.png");
   border-radius: 40px;
-  height: 70%;
+  width: 60%;
+  max-width: 800px;
   aspect-ratio: 1/1;
+
   &__icon {
     float: right;
     padding: 40px;
-    // &:hover ~ .square__description .square__info {
-    //   opacity: 1;
-    //   font-size: 15px;
-    // }
-    //~ oznacza selektor siostrzany, co oznacza, że styl zostanie zastosowany na elementach, które są rodzeństwem elementu .square.
   }
   &__description {
     width: 100%;
+    height: 100%;
     // height: 125%;
     aspect-ratio: 1/1;
-    position: relative;
     border-radius: 40px;
     background-color: $pure-white;
-    transform: translateX(50%);
-    // transform: translateX(30%);
+    transform-origin: bottom left;
+    transform: translateX(50%) scale(1);
+    transition: 0.3s ease-in;
+    &--open {
+      transition: 0.3s ease-in;
+      transform: translateX(50%) scale(1.2);
+    }
   }
   &__text {
     margin: 0;
@@ -45,20 +47,6 @@
   &__info {
     opacity: 0;
     font-size: 0;
-    // padding: 0 50px;
-    // width: 80%;
-    // &-p {
-    //   font-size: 15px;
-    //   text-align: justify;
-    // }
-    // &-btn {
-    //   font-size: 16px;
-    //   padding: 15px 50px;
-    //   border: none;
-    //   border-radius: 24px;
-    //   background-color: $blue-btn;
-    //   color: $pure-white;
-    // }
   }
   &__footer {
     font-weight: 300;
@@ -81,6 +69,37 @@
       font-style: italic;
       font-weight: 400;
       font-size: 20px;
+    }
+  }
+}
+
+@include devices(sDesctop) {
+  .square {
+    aspect-ratio: 1/1.1;
+    &__description {
+      aspect-ratio: 1/1.1;
+    }
+  }
+}
+
+@include devices(tablet) {
+  .square {
+    aspect-ratio: 1/1.7;
+    &__description {
+      aspect-ratio: 1/1.7;
+    }
+  }
+}
+
+@include devices(lMobile) {
+  .square {
+    width: 70%;
+    height: 70%;
+    aspect-ratio: 1/2.1;
+    &__description {
+      height: 100%;
+      transform: translate(20%);
+      aspect-ratio: 1/2.1;
     }
   }
 }
