--- a/style/_square.scss
+++ b/style/_square.scss
@@ -12,7 +12,7 @@
         float: right;
         padding: 40px;
         cursor: pointer;
-        &--open {
+        &.open {
             transform: rotate(180deg);
             transition: 0.3s ease;
         }
@@ -25,7 +25,7 @@
         border-radius: 40px;
         background-color: $pure-white;
         transform: translateX(50%) scale(1);
-        &--open {
+        &.open {
             transition: 0.3s linear;
             transform: translateX(50%) scale(1.1);
         }
@@ -37,7 +37,7 @@
         padding: 80px 50px;
         font-weight: 300;
         font-size: 80px;
-        &--open {
+        &.open {
             padding: 80px 50px 20px 50px;
         }
     }
@@ -56,7 +56,7 @@
     &__info {
         opacity: 0;
         font-size: 0;
-        &--open {
+        &.open {
             opacity: 1;
             padding: 0 50px;
             width: 80%;
